--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<body>
 <div class="nav">
   <div class="dropdown">
     <button onclick="location.href='#';" class="login">Login
@@ -26,8 +27,10 @@
         </div>
         <a href="https://secure.touchnet.com/C21490_ustores/web/store_main.jsp?STOREID=358"  target="_blank">Store</a>
     </div>
-
-
+    <div class = "home-img">
+        <%= image_tag("ACS-Home.png", width: "100%") %>
+    </div>
     <h1 align="center">Home</h1>
 
 </div>
+</body>
