--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -3,11 +3,13 @@
 .nav {
     overflow: hidden;
     background-color: #800000;
-    font-family: Verdana, Geneva, Tahoma, sans-serif
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin:0;
+    padding:8px;
 }
 
 .page-body{
-    width: 75%;
+    width: 70%;
     margin: auto;
     background-color: rgb(231, 231, 231);
 }
@@ -16,10 +18,11 @@
     background-color: rgb(231, 231, 231);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     display:flex;
+    text-align: center;
     justify-content: center;
 }
 .nav a {
-    float: left;
+    float: right;
     font-size: 15px;
     color: white;
     text-align: center;
@@ -31,19 +34,11 @@
     font-size: 15px;
     color: #800000;
     text-align: center;
-    padding: 5px 12px;
-    text-decoration: none;
-    min-width: 18%;
-}
-
-.dropdown a {
-    font-size: 15px;
-    color: #800000;
-    text-align: center;
-    padding: 5px 12px;
+    padding: 8px 12px;
     text-decoration: none;
     min-width: 20%;
 }
+
 .drop{
     min-width: 20%;
     display:flex;
@@ -86,7 +81,7 @@
 .dropdown-content a {
     float: none;
     color: #800000;
-    padding: 5px 12px;
+    padding: 8px 12px;
     text-decoration: none;
     display: block;
     text-align: center;
