--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -2,7 +2,7 @@
 
 .nav {
     overflow: hidden;
-    background-color: #800000;
+    background-color: 591COB;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin:0;
     padding:8px;
@@ -32,7 +32,7 @@
 }
 .main-nav a {
     font-size: 15px;
-    color: #800000;
+    color: #5C5F58;
     text-align: center;
     padding: 8px 12px;
     text-decoration: none;
