--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -1,4 +1,8 @@
 <h1>Admin Page</h1>
 
-<%= link_to 'Members', members_path %> |
+<%= link_to 'Members', members_path %> | 
+<%= link_to 'Admins', acs_admins_path %> | 
+<%= link_to 'Meetings', meetings_path %> | 
+<%= link_to 'Attendance', attendances_path %> | 
+<%= link_to 'Dues', dues_path %> |
 <%= link_to 'Home', home_path %>
