Data Design update [emails], home page styling, footer added, emailing list button

--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -5,4 +5,5 @@
 <%= link_to 'Meetings', meetings_path %> | 
 <%= link_to 'Attendance', attendances_path %> | 
 <%= link_to 'Dues', dues_path %> |
+<%= link_to 'Email List', email_lists_path %> |
 <%= link_to 'Home', home_path %>
