--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,10 +27,22 @@
         </div>
         <a href="https://secure.touchnet.com/C21490_ustores/web/store_main.jsp?STOREID=358"  target="_blank">Store</a>
     </div>
-    <div class = "home-img">
-        <%= image_tag("ACS-Home.png", width: "100%") %>
+    <div class= "page-heading">
+        <div class = "home-img" align="center">
+            <%= image_tag("ACS-Home1.png", width: "100%") %>
+        </div>
     </div>
-    <h1 align="center">Home</h1>
 
+
+
+    <footer class="page-footer">
+        <div class = "sub">
+            <h4>Join our mailing list. Never miss an update</h4>
+            <div class = "sub-b">
+                <%= link_to 'Subscribe', new_email_path %>
+            </div>
+        </div>
+        <p> 2022 by Texas A&M American Chemical Society Student Affiliate Chapter.</p>
+    </footer>
 </div>
 </body>
