--- a/app/views/pages/officer-team.html.erb
+++ b/app/views/pages/officer-team.html.erb
@@ -29,4 +29,15 @@
 
     <h1 align="center">Officer Team</h1>
 
+
+    <footer class="page-footer">
+        <div class = "sub">
+            <h4>Join our mailing list. Never miss an update</h4>
+            <div class = "sub-b">
+                <%= link_to 'Subscribe', new_email_path %>
+            </div>
+        </div>
+        <p> 2022 by Texas A&M American Chemical Society Student Affiliate Chapter.</p>
+    </footer>
+
 </div>
