--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,4 +17,6 @@
     margin: 0;
     padding: 0;
     height: 100%;
+    background-color: #DCE1E3;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
