--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,25 +1,12 @@
 
 
+//upper nav bar [login, ui access] 
 .nav {
     overflow: hidden;
-    background-color: 591COB;
+    background-color: #591C0B;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin:0;
     padding:8px;
-}
-
-.page-body{
-    width: 70%;
-    margin: auto;
-    background-color: rgb(231, 231, 231);
-}
-.main-nav {
-    overflow: hidden;
-    background-color: rgb(231, 231, 231);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    display:flex;
-    text-align: center;
-    justify-content: center;
 }
 .nav a {
     float: right;
@@ -30,15 +17,32 @@
     text-decoration: none;
     
 }
+
+//adjusting width
+.page-body{
+    width: 65%;
+    margin: auto;
+    background-color: rgb(231, 231, 231);
+}
+
+//lower navigation bar [home, about, officer team, general meetings, store] for main sight
+.main-nav {
+    overflow: hidden;
+    background-color: rgb(231, 231, 231);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display:flex;
+    justify-content:space-evenly;
+}
+
 .main-nav a {
     font-size: 15px;
     color: #5C5F58;
     text-align: center;
     padding: 8px 12px;
     text-decoration: none;
-    min-width: 20%;
+    min-width: 175px;
 }
-
+//dropdown
 .drop{
     min-width: 20%;
     display:flex;
@@ -48,6 +52,8 @@
     float: left;
     overflow: hidden;
 }
+
+//login dropdown settings
 .dropdown .login {
     font-size: 15px;
     border: none;
@@ -62,22 +68,24 @@
 
 
 
+//hover settings for nav & main-nav
 .nav a:hover, .dropdown:hover .dropbtn {
     background-color: #ffffff;
     color: #800000;
 }
 .main-nav a:hover, .dropdown:hover .dropbtn {
-    background-color: #800000;
+    background-color:#ddd;;
     color: #ffffff;;
 }
 
+//dropdown under general meetings tab
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #ffffff;;
     z-index: 1;
+    min-width: 175px;
 }
-
 .dropdown-content a {
     float: none;
     color: #800000;
@@ -86,7 +94,6 @@
     display: block;
     text-align: center;
 }
-
 .dropdown-content a:hover {
 background-color: #ddd;
 }
@@ -95,4 +102,58 @@ display: block;
 }
 .drop:hover .dropdown-content {
     display: block;
+}
+
+
+
+//heading for all main pages
+.page-heading{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.page-heading h2{
+    font-size:15px;
+    padding: 0px;
+}
+
+
+//page footer with copy right and mailing list
+.page-footer{
+    display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.page-footer h4{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    margin: 10px;
+}
+
+.page-footer p{
+    background-color: #591C0B;
+    color: rgba(245, 245, 245, 0.603);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    padding: 8px;
+}
+
+//subscribe section
+.sub{
+    margin: auto;
+    width: 50%;
+    border: solid #591C0B;
+    border-width:1px;
+
+}
+//subscribe button in footer (mailing list)
+.sub-b{
+    margin-left: auto;
+    margin-bottom: 10px;
+    margin-right: auto;
+    text-align: center;
+    padding:4px 8px;
+    background-color: #591C0B;
+    color: white;
+    width: 20%;
 }
