About page updates

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -27,8 +27,19 @@
         <a href="https://secure.touchnet.com/C21490_ustores/web/store_main.jsp?STOREID=358"  target="_blank">Store</a>
     </div>
     
-    
-    <h1 align="center">About</h1>
+    <div class= "page-heading">
+        <div class = "home-img" align="center">
+            <%= image_tag("ACS-Header.png", width: "100%") %>
+        </div>
+    </div>
+
+    <div class= "cpage-body">
+        <h3>Due to COVID-19, all of our general meetings, socials, and outreach activities will be done virtually using ZOOM.</h3>
+        <h4>Mission:</h4>
+        <p>ACS serves the undergraduate scientific community at Texas A&M providing resources to students interested in chemistry. We are committed to providing a space for those interested in science to learn from industry/academic experts how an interest in chemistry may be used to build a meaningful career in teaching, R&D and healthcare related fields. We aid students in finding chemistry related internships and REU opportunities, engage in science outreach projects in the BCS area and interact with the national ACS chapter at regional and national meetings. </p>
+
+        <p>We would love to see you at our next meeting! You can keep up with our organization by following us on Twitter and Instagram.</p>
+    </div>
 
     <footer class="page-footer">
         <div class = "sub">
