--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -32,6 +32,8 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     display:flex;
     justify-content:space-evenly;
+    border: solid  #5C5F58;
+    border-width:1px 0px;
 }
 
 .main-nav a {
@@ -115,6 +117,16 @@ display: block;
     padding: 0px;
 }
 
+
+//center page body (main page contents)
+.cpage-body{
+    margin-top: -20px;
+    display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+}
 
 //page footer with copy right and mailing list
 .page-footer{
