about page and general meetings

--- a/app/views/pages/officer-team.html.erb
+++ b/app/views/pages/officer-team.html.erb
@@ -26,8 +26,17 @@
         </div>
         <a href="https://secure.touchnet.com/C21490_ustores/web/store_main.jsp?STOREID=358"  target="_blank">Store</a>
     </div>
+     
+    <div class= "page-heading">
+        <div class = "home-img" align="center">
+            <%= image_tag("ACS-Header.png", width: "100%") %>
+        </div>
+    </div>
 
-    <h1 align="center">Officer Team</h1>
+    <div class= "cpage-body">
+        <h4>Howdy! We are all super excited to be part of the officer team for the school year 2020-2021. If you have any questions, suggestions, or would like to be a speaker at a general meeting, please email us at 
+        <a href="mailto:acsaggie@gmail.com">acsaggie@gmail.com</a>. We hope to see you at a meeting!</h4>
+    </div>
 
 
     <footer class="page-footer">
