--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -130,7 +130,10 @@ display: block;
 
 //page footer with copy right and mailing list
 .page-footer{
-    display: block;
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 0;
+    width: 65%;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
