--- a/app/views/pages/general-meetings.html.erb
+++ b/app/views/pages/general-meetings.html.erb
@@ -27,7 +27,33 @@
         <a href="https://secure.touchnet.com/C21490_ustores/web/store_main.jsp?STOREID=358"  target="_blank">Store</a>
     </div>
 
-    <h1 align="center">General Meetings</h1>
+    <div class= "page-heading">
+        <div class = "home-img" align="center">
+            <%= image_tag("ACS-Header.png", width: "100%") %>
+        </div>
+    </div>
+
+    <div class= "cpage-body">
+        <h1>General Meetings</h1>
+        <h3>Held biweekly @ 6:30pm virtually</h3>
+        <dl>
+            <dt>08/25:</dt>
+            <dd>Beginning of Semester Social/Science Career Fair Informational</dd>
+            <dt>09/08:</dt>
+            <dd>Catalyzing Bonds Social</dd>
+            <dt>09/22:</dt>
+            <dd>Speaker: Dr. Jeffery Cirillo (Coronavirus research)</dd>
+            <dt>10/06:</dt>
+            <dd>Speaker: Dr. Aitkenhead-Peterson (Forensic soil chemistry)</dd>
+            <dt>10/20:</dt>
+            <dd>Speaker: Tatia Felman (Houston Methodist Learning Medicine)</dd>
+            <dt>11/03:</dt>
+            <dd>Speaker: Christ Holmquist from Supersense (Chemistry of Instant Photography)</dd>
+            <dt>11/17:</dt>
+            <dd>Speaker: Tami Annable (Executive Director at Temple Health and Bioscience Center)</dd>
+        </dl>
+
+    </div>
 
 
     <footer class="page-footer">
