--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -13,7 +13,7 @@
 <div class= "page-body">
     <div class="main-nav">
         <a href="home">Home</a>
-        <a href="about">About</a>
+        <a class ="selected-tab" href="about">About</a>
         <a href="officer-team">Officer Team</a>
         <div class="drop">
         <a href="general-meetings">General Meetings</a>
