--- a/app/views/pages/general-meetings.html.erb
+++ b/app/views/pages/general-meetings.html.erb
@@ -16,7 +16,7 @@
         <a href="about">About</a>
         <a href="officer-team">Officer Team</a>
         <div class="drop">
-        <a href="general-meetings">General Meetings</a>
+        <a class ="selected-tab" href="general-meetings">General Meetings</a>
         <div class="dropdown-content">
             <a href="general-meetings">General Meetings</a>
             <a href="#">Outreach</a>
