--- a/app/views/pages/officer-team.html.erb
+++ b/app/views/pages/officer-team.html.erb
@@ -14,7 +14,7 @@
     <div class="main-nav">
         <a href="home">Home</a>
         <a href="about">About</a>
-        <a href="officer-team">Officer Team</a>
+        <a class ="selected-tab" href="officer-team">Officer Team</a>
         <div class="drop">
         <a href="general-meetings">General Meetings</a>
         <div class="dropdown-content">
