emails path fix in admin - page titles set

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,6 @@
+<head>
+    <title>About | ACS Texas A&M</title>
+</head>
 <div class="nav">
   <div class="dropdown">
     <button onclick="location.href='#';" class="login">Login
