--- a/app/views/pages/general-meetings.html.erb
+++ b/app/views/pages/general-meetings.html.erb
@@ -1,3 +1,7 @@
+<head>
+    <title>General Meetings | ACS Texas A&M</title>
+</head>
+
 <div class="nav">
   <div class="dropdown">
     <button onclick="location.href='#';" class="login">Login
