--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,10 +22,9 @@
         <div class="drop">
         <a href="general-meetings">General Meetings</a>
         <div class="dropdown-content">
-            <a href="general-meetings">General Meetings</a>
-            <a href="#">Outreach</a>
-            <a href="#">Social Events</a>
-            <a href="#">Career Development</a>
+            <a href="outreach">Outreach</a>
+            <a href="social-events">Social Events</a>
+            <a href="career-development">Career Development</a>
         </div>
         </div>
         <a href="https://secure.touchnet.com/C21490_ustores/web/store_main.jsp?STOREID=358"  target="_blank">Store</a>
@@ -45,11 +44,11 @@
                 <%= image_tag("ACS-HB-GM.png", width: "100%") %>
                 <p>Biweekly general meetings are held throughout the fall and spring semesters from 6:00-7:30pm. Hear from chemists in all sorts of fields such as industry, medical, business, and academia! </p>
             </div>
-            <div onclick="window.location.href = '#';"class = "card">
+            <div onclick="window.location.href = 'outreach';"class = "card">
                 <%= image_tag("ACS-HB-O.png", width: "100%") %>
                 <p>Interested in sharing science with the next generation? From the A&M Chemistry Open House to elementary school science nights ACS volunteers throughout the BCS area. </p>
             </div>
-            <div onclick="window.location.href = '#';"class = "card">
+            <div onclick="window.location.href = 'career-development';"class = "card">
                 <%= image_tag("ACS-HB-CD.png", width: "100%") %>
                 <p>Interested in starting undergraduate research or getting comfortable with approaching professors? ACS offers opportunities to get to know professors to enrich your education here in A&M for the future.</p>
             </div>
