--- a/app/views/pages/officer-team.html.erb
+++ b/app/views/pages/officer-team.html.erb
@@ -22,10 +22,9 @@
         <div class="drop">
         <a href="general-meetings">General Meetings</a>
         <div class="dropdown-content">
-            <a href="general-meetings">General Meetings</a>
-            <a href="#">Outreach</a>
-            <a href="#">Social Events</a>
-            <a href="#">Career Development</a>
+            <a href="outreach">Outreach</a>
+            <a href="social-events">Social Events</a>
+            <a href="career-development">Career Development</a>
         </div>
         </div>
         <a href="https://secure.touchnet.com/C21490_ustores/web/store_main.jsp?STOREID=358"  target="_blank">Store</a>
