--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,6 @@
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: #DCE1E3;
+    background-color: #ffffff;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
