--- a/app/views/pages/career-development.html.erb
+++ b/app/views/pages/career-development.html.erb
@@ -1,6 +1,12 @@
 <head>
-    <title>About | ACS Texas A&M</title>
+    <title>Career Development | ACS Texas A&M</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.1/css/bootstrap.min.css" integrity="sha512-T584yQ/tdRR5QwOpfvDfVQUidzfgc2339Lc8uBDtcp/wYu80d7jwBgAxbyMh0a9YM9F8N3tdErpFI8iaGx6x5g==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.1/js/bootstrap.min.js" integrity="sha512-UR25UO94eTnCVwjbXozyeVd6ZqpaAE9naiEUBK/A+QDbfSTQFhPGj5lOR6d8tsgbBk84Ggb5A3EkjsOgPRPcKA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
+
 <div class="nav">
   <div class="dropdown">
     <button onclick="location.href='#';" class="login">Login
@@ -37,8 +43,24 @@
 
     <div class= "cpage-body">
         <h3>OutReach</h3>
-        <h4></h4>
-        <p>Check back soon! We are busy finding outreach opportunities!</p>
+        <div class="row">
+				<div class="col-md-3">
+					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+				</div>
+				<div class="col-md-9">
+					<div class="jumbotron">
+						<h2>
+							Hello, world!
+						</h2>
+						<p>
+							This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.
+						</p>
+						<p>
+							<a class="btn btn-primary btn-large" href="#">Learn more</a>
+						</p>
+					</div>
+				</div>
+			</div>
 
     </div>
 
