--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,16 @@
+<!doctype html>
+<html lang="en">
+
 <head>
     <title>Home | ACS Texas A&M</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.1/css/bootstrap.min.css" integrity="sha512-T584yQ/tdRR5QwOpfvDfVQUidzfgc2339Lc8uBDtcp/wYu80d7jwBgAxbyMh0a9YM9F8N3tdErpFI8iaGx6x5g==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.1/js/bootstrap.min.js" integrity="sha512-UR25UO94eTnCVwjbXozyeVd6ZqpaAE9naiEUBK/A+QDbfSTQFhPGj5lOR6d8tsgbBk84Ggb5A3EkjsOgPRPcKA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
+
+
 <body>
 <div class="nav">
   <div class="dropdown">
@@ -37,7 +47,7 @@
 
     <div class= "cpage-body">
         <h3>Howdy! We hold general meetings biweekly on Mondays at 6:00-7:30 p.m. in person.</h3>
-        <h3>Join our <a href="https://calendar.google.com/calendar/u/0?cid=Y185ZGpqbXZvOXA2MG9lZ2Ywbmh1Y2c5cGhmOEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t"  target="_blank">open meeting google calendar!</a></h3>
+        <h4>Join our <a href="https://calendar.google.com/calendar/u/0?cid=Y185ZGpqbXZvOXA2MG9lZ2Ywbmh1Y2c5cGhmOEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t"  target="_blank">open meeting google calendar!</a></h4>
 
         <div class = "cards">
             <div onclick="window.location.href = 'general-meetings';" class = "card">
@@ -58,14 +68,18 @@
 
 
 
-    <footer class="page-footer">
-        <div class = "sub">
-            <h4>Join our mailing list. Never miss an update</h4>
-            <div class = "sub-b">
-                <%= link_to 'Subscribe', new_email_path %>
+    <footer>
+        <div class ="page-footer">
+            <div class = "sub">
+                <h4>Join our mailing list. Never miss an update</h4>
+                <div class = "sub-b">
+                    <%= link_to 'Subscribe', new_email_path %>
+                </div>
             </div>
+            <p> 2022 by Texas A&M American Chemical Society Student Affiliate Chapter.</p>
         </div>
-        <p> 2022 by Texas A&M American Chemical Society Student Affiliate Chapter.</p>
     </footer>
 </div>
 </body>
+
+</html>
