--- a/app/views/pages/career-development.html.erb
+++ b/app/views/pages/career-development.html.erb
@@ -41,26 +41,52 @@
         </div>
     </div>
 
-    <div class= "cpage-body">
-        <h3>OutReach</h3>
+    <div>
+        <center>
+        <h3>Career Development</h3>
+        </center>
         <div class="row">
-				<div class="col-md-3">
-					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
-				</div>
-				<div class="col-md-9">
-					<div class="jumbotron">
-						<h2>
-							Hello, world!
-						</h2>
-						<p>
-							This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.
-						</p>
-						<p>
-							<a class="btn btn-primary btn-large" href="#">Learn more</a>
-						</p>
-					</div>
-				</div>
-			</div>
+            <div class="col-md-3">
+                <%= image_tag("ACS-CareerC.jpg", width: "100%") %>
+            </div>
+            <div class="col-md-9">
+                <div class="jumbotron">
+                    <h2>
+                        Texas A&M Career Center
+                    </h2>
+                    <ul>
+                    <li>
+                        Looking for an internship? Search HireAggies a free job posting site curated by the Texas A&M Career Center. The Career Center offers free resume help, interview prep and career advisers by field. 						</p>
+                    </li></ul>
+                        <a class="btn btn-primary btn-large" href="https://tamu-csm.symplicity.com/students/index.php?s=home&signin_tab=0">HireAggies</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <%= image_tag("ACS-logo-og.png", width: "100%") %>
+            </div>
+            <div class="col-md-9">
+                <div class="jumbotron">
+                    <h2>
+                        SCI Scholars Internship Program
+                    </h2>
+                    <h4>
+                        Industrial Internships for Chemistry and Chemical Engineering Undergraduate Students
+                    </h4>
+                    <ul>
+                    <li>
+                        The Society of Chemical Industry (SCI), American Institute of Chemical Engineers (AIChE), and the American Chemical Society created the SCI Scholars Summer Internship Program to introduce chemistry and chemical engineering students to careers in the chemical industry.
+                    </li><li>
+                        Sophomores and Juniors majoring in chemistry and chemical engineering may apply starting October 1st
+                    </li>
+                    </ul>
+                        <a class="btn btn-primary btn-large" href="https://getexperience.acs.org/">Application</a>
+                    </p>
+                </div>
+            </div>
+        </div>
 
     </div>
 
