--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -7,6 +7,35 @@
         margin:0;
         padding:8px;
     }
+
+    .page-body{
+        width: 95%;
+        margin: auto;
+        background-color: #fdfdfd;
+    }
+    //cards on homepage
+    .cards {
+        margin-left: auto;
+        margin-right: auto;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-auto-rows: auto;
+        grid-gap: 2rem;   
+        margin-top: 75px;
+        margin-bottom: 50pxpx;
+    }
+
+    .card {
+        background-color: #ffffff50;
+        border: 0.5px solid #591c0b27;
+        box-shadow: 0px 0px 8px #88888881;
+        max-width: 70%;
+        border-radius: 4px;
+        padding-top: .5rem;
+        padding-left: .5rem;
+        padding-right: .5rem;
+        transition: all .2s ease-in;
+    }
     /* ... */
 }
 @media screen and (orientation: landscape) {
@@ -202,7 +231,6 @@
         width: 20%;
     }
     
-    
     //cards on homepage
     .cards {
         display: grid;
@@ -212,7 +240,7 @@
         margin-top: 75px;
         margin-bottom: 30px;
     }
-             
+
     .card {
         background-color: #ffffff50;
         border: 0.5px solid #591c0b27;
@@ -224,20 +252,23 @@
         padding-right: .5rem;
         transition: all .2s ease-in;
     }
+    
+    
+}
 
-    .card p{
-        padding-top: .5rem;
-    }
+        
 
-    
-    
-    .card:hover {
-        background-color: #adadad41;
-        color: white;
-        cursor: pointer;
-        transition: all .2s ease-in;
-    }
-    
+.card p{
+    padding-top: .5rem;
+}
+
+
+
+.card:hover {
+    background-color: #adadad41;
+    color: white;
+    cursor: pointer;
+    transition: all .2s ease-in;
 }
 //upper nav bar [login, ui access] 
 
